--- a/views/showall.ejs
+++ b/views/showall.ejs
@@ -9,7 +9,8 @@
 <body>
     <div class="container mt-5">
         <h2 class="mb-4">Articles</h2>
-        
+        <a href="/articles" class="btn btn-primary">New Article Page</a>
+
         <div class="row">
             <!-- Loop through articles -->
             <% articles.forEach(article => { %>
