--- a/views/articlesedit.ejs
+++ b/views/articlesedit.ejs
@@ -29,6 +29,12 @@
         <!-- Hidden CreatedAt Field -->
         <input type="hidden" name="createdAt" value="<%= article.createdAt %>">
 
+         <!-- Image URL Input -->
+         <div class="mb-3">
+            <label for="imageUrl" class="form-label">Image URL</label>
+            <input type="url" class="form-control" id="imageUrl" name="imageUrl" placeholder="Enter image URL..." required>
+        </div>
+
         <!-- Topic Radio Buttons -->
         <div class="mb-3">
             <label class="form-label">Topic</label>
